Fixed bug where screen would flicker when changing size

--- a/src/client/app/home/home.component.css
+++ b/src/client/app/home/home.component.css
@@ -1,3 +1,9 @@
+:host {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 .app-panel {
   height: 100vh;
   display: block;
